--- a/godel-wordpress/templates/deployment.yaml
+++ b/godel-wordpress/templates/deployment.yaml
@@ -1,21 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "godel-wordpress.fullname" . }}
+  name: {{ .Values.app }}
   labels:
-{{ include "godel-wordpress.labels" . | indent 4 }}
+    app: {{ .Values.app }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "godel-wordpress.name" . }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
+      app: {{ .Values.app }}
       tier: {{ .Values.tier }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "godel-wordpress.name" . }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
+        app: {{ .Values.app }} 
         tier: {{ .Values.tier }}
     spec:
     {{- with .Values.imagePullSecrets }}
@@ -34,14 +32,14 @@ spec:
           env:
           - name: WORDPRESS_DB_HOST
             value: {{ .Values.dbhost }}
-          valueFrom:
-            secretKeyRef:
-              name: passwordsql
-              key: password
+          - name: WORDPRESS_DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: passwordsql
+                key: password
           ports:
-            - name: http
-              containerPort: 80
-              protocol: TCP
+          - name: wordpress
+            containerPort: 80
           volumeMounts:
           - name: wordpress-persistent-storage
             mountPath: /var/www/html
@@ -49,4 +47,7 @@ spec:
       - name: wordpress-persistent-storage
         persistentVolumeClaim:
           claimName: {{ .Values.claimName }}
+      - name: passwordsql
+        secret: 
+          secretName: passwordsql
 
