--- a/godel-wordpress/templates/service.yaml
+++ b/godel-wordpress/templates/service.yaml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "godel-wordpress.fullname" . }}
+  name: {{ .Values.service.name }}
   labels:
-{{ include "godel-wordpress.labels" . | indent 4 }}
+    app: {{ .Values.app }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
   selector:
-    app.kubernetes.io/name: {{ include "godel-wordpress.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    app: {{ .Values.app }}
     tier: {{ .Values.tier }}
